--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-4">
-                        <a class="btn btn-green" href="#">For Schools</a><a class="btn btn-white-border float-right" href="#">Demo Request</a>
+                        <a class="btn btn-white-border" href="#">For Schools</a><a class="btn btn-white-border float-right" href="#">Demo Request</a>
                     </div>
                 </div>               
            </div>
@@ -96,7 +96,7 @@
                 <div class="col-4">
                     <div class="d-flex flex-column customer__info">
                         <span class="customer__info--name">Bert A.</span>
-                        <span class="customer__info--note">CIO<br/>Higher Education, 51-200 employees</span>
+                        <span class="customer__info--note">CIO Higher Education, 51-200 employees</span>
                         <ul>
                             <li><b>Used the Software for:</b> 1-2 years</li>
                             <li><b>Source:</b> Capterra</li>
@@ -161,18 +161,18 @@
            </div>
            <div class="row content-row justify-content-center">
                <div class="col-6 text-center">
-                   <h2 class="after-center">Complete Software Solution<br/>for Identity Management</h2>
-                   <p>Users use cloud apps. PortalGuard is an on premise, no client-side extension software. Since 2000 organizations in industries such as education, healthcare, finance and law with users from 10 to 15 000 have<br/>loved it’s usability and security.</p>
+                   <h2 class="after-center">Complete Software Solution for Identity Management</h2>
+                   <p>Users use cloud apps. PortalGuard is an on premise, no client-side extension software. Since 2000 organizations in industries such as education, healthcare, finance and law with users from 10 to 15 000 have loved it’s usability and security.</p>
                </div>
            </div>
            <div class="row content-row justify-content-center">
                <div class="col-2 text-center">
                    <img src="svg/integrates.svg" alt="Integrates With Anything">
-                   <h3>Integrates<br/>With Anything</h3>
+                   <h3>Integrates With Anything</h3>
                </div>
                <div class="col-2 text-center">
                    <img src="svg/users.svg" alt="Integrates With Anything">
-                   <h3>Millions of<br/>Daily Users</h3>
+                   <h3>Millions of Daily Users</h3>
                 </div>
                <div class="col-2 text-center">
                    <img src="svg/stars.svg" alt="Integrates With Anything">
@@ -180,12 +180,12 @@
                 </div>
                <div class="col-2 text-center">
                    <img src="svg/support.svg" alt="Integrates With Anything">
-                   <h3>Anytime<br/>24/7 Support</h3>
+                   <h3>Anytime 24/7 Support</h3>
                 </div>
            </div>
            <div class="row content-row fixed-price">
                 <div class="col-5 offset-1">
-                    <h2>Unlimited Users.<br />One Fixed Price.</h2>
+                    <h2>Unlimited Users. One Fixed Price.</h2>
                 </div>
             </div>
             <div class="row content-row">
@@ -196,7 +196,7 @@
                     </div>
                     <div class="fixed-price__box">
                             <span>5k</span>
-                            <p>per year <br/>after</p>
+                            <p>per year after</p>
                     </div>
                 </div>
                 <div class="col-6 fixed-price__images d-flex justify-content-between">
@@ -248,20 +248,48 @@
            <div class="row content">
                <div class="col text-center">
                     <h3>And over <span class="green-text">120+</span> other features</h3>
-                    <p><a class="btn btn-green" href="#">Read here</a></p>
+                    <p><a class="btn btn-green-border" href="#">Read here</a></p>
                </div>
            </div>
        </div>
        <div class="container">
            <div class="row content fixed-price">
                <div class="col-4 offset-1">
-                    <h2>Integrates with ANY app<br />your school uses.</h2>
+                    <h2>Integrates with ANY app your school uses.</h2>
                     <p>You have unique requirements. Our team will integrate any app you need to use in your eco-system. Just ask.</p>
                </div>
                <div class="col-6 offset-1">
                    <div class="video-container">
-                        <a href="#"><img class="video-container__play" src="svg/play-btn.svg" alt="">  </a>                     
-                        <img src="img/play-video-bg.png" alt="Video">
+                        <a href="#"><img class="video-container__play" src="svg/play-btn.svg" alt=""></a>                     
+                        <img class="img-fluid" width="610px" src="img/play-video-bg.png" alt="Video">
+                   </div>
+               </div>
+           </div>
+       </div>
+       <div class="container-fluid">
+           <div class="row content">
+               <div class="col-6 text-right contact-img">
+                   <img class="img-fluid" width="469px" src="img/business-people.png" alt="Contact Image">
+               </div>
+               <div class="col-6 grey-bg">
+                   <h2>Email, call or live chat - we’re always here to help.</h2>
+                   <p>Hours are 8:00am to 6:00pm ET. If you don't get a response within a minute - double check the number. After hours please email us below.</p>
+                   <h3>Call us now at <span class="green-text">(603) 547-1200</span></h3>
+                   <div class="contact-form-bg">
+                       <form class="contact-form" action="">
+                           <div class="row">
+                                <div class="col-5 contact-input"><input required placeholder="Name" type="text" name="name" id="name"></div>
+                                <div class="col-5 offset-1 contact-input"><input required placeholder="Email Adress" type="text" name="email" id="email"></div>
+                                <div class="col-5 contact-input"><input required placeholder="Phone Number" type="text" name="phone" id="phone"></div>
+                                <div class="col-5 offset-1 contact-input"><input required placeholder="Topic" type="text" name="topic" id="topic"></div>
+                                <div class="col-11 contact-input"><input required placeholder="What are you looking for?" type="text" name="msg" id="msg"></div>
+                           </div>
+                           <div class="row">
+                                <div class="col-3 contact-submit">
+                                    <input type="submit" value="Submit">
+                                </div>
+                           </div>
+                       </form>
                    </div>
                </div>
            </div>
