--- a/index.html
+++ b/index.html
@@ -29,8 +29,15 @@
        </div>
        <div class="container">
             <header class="row page-header align-items-center">
-                <div class="col-lg-3 col-5 offset-xs-1 col-md-12 medium-center-text">
+                <div class="col-lg-3 col-6 offset-xs-1 col-md-12 medium-center-text">
                     <a href="#"><img class="page-header__logo img-fluid" src="img/pg-banner-shield.png" alt="PortalGuard"></a>
+                </div>
+                <div class="col mobile-menu">
+                    <div class="hamburger-btn">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
                 </div>
                 <div class="col-lg col-md-12 d-flex justify-content-between">
                     <nav class="hide-mobile">
@@ -78,6 +85,46 @@
                     </div>
                 </div>
             </header>
+            <div class="mobile-menu-content page-header__nav">
+                <ul>
+                    <li><a class="active" href="#">Home</a></li>
+                    <li><a href="#">Our Features</a></li>
+                    <li class="have-dropdown">
+                        <a href="#">Integration</a>
+                        <ul class="dropdown">
+                            <li class="have-submenu">
+                                <a href="#">Packages</a>
+                                <ul class="submenu">
+                                    <li><a href="#">Apache</a></li>
+                                    <li><a href="#">Domino</a></li>
+                                    <li><a href="#">Education</a></li>
+                                    <li><a href="#">IIS</a></li>
+                                    <li><a href="#">Office 365</a></li>
+                                    <li><a href="#">Sharepoint</a></li>
+                                    <li><a href="#">Websphere</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">Active Directory</a></li>
+                            <li class="have-submenu">
+                                <a href="#">Industry</a>
+                                <ul class="submenu">
+                                    <li><a href="#">Apache</a></li>
+                                    <li><a href="#">Domino</a></li>
+                                    <li><a href="#">Education</a></li>
+                                    <li><a href="#">IIS</a></li>
+                                    <li><a href="#">Office 365</a></li>
+                                    <li><a href="#">Sharepoint</a></li>
+                                    <li><a href="#">Websphere</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">Specialization</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Education </a></li>
+                    <li><a href="#">Resources </a></li>
+                    <li><a href="#">Company</a></li>
+                </ul>
+            </div>
        </div>
        <div class="container-fluid hero-img">
            <div class="container">
@@ -230,8 +277,8 @@
                     <h2>Unlimited Users. One Fixed Price.</h2>
                 </div>
             </div>
-            <div class="row content-row">
-                <div class="col-lg-5 col-md-12 offset-lg-1 d-flex j-center">
+            <div class="row content-row j-center">
+                <div class="col-lg-5 col-md-12 col-10 offset-lg-1 d-flex j-center">
                     <div class="fixed-price__box">
                         <span>20k</span>
                         <p>first year</p>
@@ -274,26 +321,26 @@
                </div>
                <div class="col-lg-4 offset-lg-1 col-10">
                    <div class="works-item flex-column">
-                       <img  src="svg/sync-icon.svg" alt="Sync">
+                       <img class="img-fluid"  src="svg/sync-icon.svg" alt="Sync">
                         <div class="works-item__text">
                             <h3>One Password</h3>
                             <p>Single Sign onto any app with just one click. No more time lost!</p>
                         </div>
                    </div>
                    <div class="works-item flex-column">
-                        <img  src="svg/security.svg" alt="Security">
+                        <img class="img-fluid"  src="svg/security.svg" alt="Security">
                          <div class="works-item__text">
                              <h3>Self-Service</h3>
                              <p>Users can reset their own passwords. Keeping I.T. happy with decreased helpdesk support.</p>
                          </div>
                     </div>
                     <div class="works-item flex-column">
-                            <img  src="svg/shared-icon.svg" alt="Shared">
-                             <div class="works-item__text">
-                                 <h3>Compliance</h3>
-                                 <p>From two factor authentication all the way to governement regulations - you're covered!</p>
-                             </div>
+                        <img class="img-fluid"  src="svg/shared-icon.svg" alt="Shared">
+                        <div class="works-item__text">
+                            <h3>Compliance</h3>
+                            <p>From two factor authentication all the way to governement regulations - you're covered!</p>
                         </div>
+                    </div>
                </div>
            </div>
            <div class="row content">
@@ -309,7 +356,7 @@
                     <h2>Integrates with ANY app your school uses.</h2>
                     <p>You have unique requirements. Our team will integrate any app you need to use in your eco-system. Just ask.</p>
                </div>
-               <div class="col-6 offset-lg-1">
+               <div class="col-md-6 col-sm-10 col-xs-11 offset-lg-1">
                    <div class="video-container">
                         <a href="#"><img class="video-container__play" src="svg/play-btn.svg" alt=""></a>                     
                         <img class="img-fluid" width="610px" src="img/play-video-bg.png" alt="Video">
@@ -322,7 +369,7 @@
                <div class="col-6 text-right contact-img hide-lrg">
                    <img class="img-fluid" width="469px" src="img/business-people.png" alt="Contact Image">
                </div>
-               <div class="col-lg-6 col-10 grey-bg medium-center-text mobile-center-text">
+               <div class="col-lg-6 col-11 grey-bg medium-center-text mobile-center-text">
                    <h2>Email, call or live chat - we’re always here to help.</h2>
                    <p>Hours are 8:00am to 6:00pm ET. If you don't get a response within a minute - double check the number. After hours please email us below.</p>
                    <h3>Call us now at <span class="green-text">(603) 547-1200</span></h3>
