FadeIn and Companies

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500,700" rel="stylesheet">
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/owl.carousel.css">
+        <link rel="stylesheet" href="css/aos.css">
         <link rel="stylesheet" href="css/bootstrap-grid.css">
         <link rel="stylesheet" href="css/style.css">
     </head>
@@ -127,7 +128,7 @@
             </div>
        </div>
        <div class="container-fluid hero-img">
-           <div class="container">
+           <div data-aos="fade-up" class="container">
                <div class="row justify-content-center">
                    <div class="col-lg-9 col-md-12 col-10 text-center">
                         <h1>
@@ -152,6 +153,29 @@
            <div class="container">
                <div class="row">
                    <div class="owl-carousel owl-carousel-logos d-flex align-items-center justify-content-between">
+                       <div><img src="img/companies/aig.png" alt="AIG"></div>
+                       <div><img src="img/companies/amnesty-international.png" alt="amnesty-international"></div>
+                       <div><img src="img/companies/baker-logo.png" alt="Baker"></div>
+                       <div><img src="img/companies/bank-of-new-zealand.png" alt="Bank Of New Zeland"></div>
+                       <div><img src="img/companies//Central_Penn_College_logo.png" alt="Central Penn College"></div>
+                       <div><img src="img/companies/city-college-san-fran.png" alt="City College San Fran"></div>
+                       <div><img src="img/companies/colgate-palmolive.png" alt="Colgate Palmolive"></div>
+                       <div><img src="img/companies//Delaware_County_Community_College_District.png" alt="Delaware County"></div>
+                       <div><img src="img/companies/hale-school.png" alt="Hale School"></div>
+                       <div><img src="img/companies/hershey-entertainment.png" alt="Hershey Entertaiment"></div>
+                       <div><img src="img/companies/liu-logo.png" alt="LIU"></div>
+                       <div><img src="img/companies/neit-logo.png" alt="Neit Logo"></div>
+                       <div><img src="img/companies/New_College_of_Florida.png" alt="New College Florida"></div>
+                       <div><img src="img/companies/orange-business-group.png" alt="Orange"></div>
+                       <div><img src="img/companies/Shasta_College_logo.png" alt="Shasta College"></div>
+                       <div><img src="img/companies/sheetz.png" alt="Sheetz"></div>
+                       <div><img src="img/companies/sodexo.png" alt="Sodexo"></div>
+                       <div><img src="img/companies/spartennash.png" alt="Spartennash"></div>
+                       <div><img src="img/companies/SWC_logo.png" alt="SWC"></div>
+                       <div><img src="img/companies/td-bank.png" alt="TD Bank"></div>
+                       <div><img src="img/companies/tessella-logo.png" alt="Tessella Logo"></div>
+                       <div><img src="img/companies/tufts-healthplan.png" alt="Tufts"></div>
+                       <div><img src="img/companies/ykk.png" alt="YKK"></div>
                        <div><img src="img/companies/pioneer-logo.png" alt="Pioneer"></div>
                        <div><img src="img/companies/calabrio.png" alt="Calabrio"></div>
                        <div><img src="img/companies/maverik-center.png" alt="Maverik"></div>
@@ -197,7 +221,7 @@
                                             <li></li>
                                             <li></li>
                                             <li></li>
-                                            <li class="customer__stars--grey"></li>
+                                            <li></li>
                                         </ul>
                                         <span>Overall</span>
                                     </div>
@@ -245,33 +269,181 @@
                                     </div>
                                 </div>
                     </div>
+                    <div class="d-flex flex-wrap align-items-center">
+                            <div class="col-md-12 col-lg-2">
+                                    <div class="customer">
+                                        <img class="customer__avatar" src="img/customer-avatar.png" alt="Customer">
+                                        <img class="customer__logo" src="img/customer-logo.png" alt="Customer Company">
+                                    </div>
+                                </div>
+                                <div class="col-md-12 col-lg-4">
+                                    <div class="d-flex flex-column customer__info medium-center-text mobile-center-text ">
+                                        <span class="customer__info--name">Bert A.</span>
+                                        <span class="customer__info--note">CIO Higher Education, 51-200 employees</span>
+                                        <ul>
+                                            <li><b>Used the Software for:</b> 1-2 years</li>
+                                            <li><b>Source:</b> Capterra</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="col-md-12 col-lg-2">
+                                    <div class="d-flex flex-column text-center">
+                                        <span class="customer__rate">4/5</span>
+                                        <ul class="customer__stars">
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                            <li class="customer__stars--grey"></li>
+                                        </ul>
+                                        <span>Overall</span>
+                                    </div>
+                                </div>
+                                <div class="col-md-12 col-lg-4 hide-mobile">
+                                    <div class="customer__rating">
+                                        <span>Easy of use:</span>
+                                        <ul class="customer__stars">
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                            <li class="customer__stars--grey"></li>
+                                        </ul>
+                                    </div>
+                                    <div class="customer__rating">
+                                        <span>Features & Functionality:</span>
+                                        <ul class="customer__stars">
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                            <li class="customer__stars--grey"></li>
+                                            <li class="customer__stars--grey"></li>
+                                        </ul>
+                                    </div>
+                                    <div class="customer__rating">
+                                        <span>Customer Support:</span>
+                                        <ul class="customer__stars">
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                            <li class="customer__stars--grey"></li>
+                                        </ul>
+                                    </div>
+                                    <div class="customer__rating">
+                                        <span>Value for Money:</span>
+                                        <ul class="customer__stars">
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                            <li class="customer__stars--grey"></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                    </div>
+                    <div class="d-flex flex-wrap align-items-center">
+                            <div class="col-md-12 col-lg-2">
+                                    <div class="customer">
+                                        <img class="customer__avatar" src="img/customer-avatar.png" alt="Customer">
+                                        <img class="customer__logo" src="img/customer-logo.png" alt="Customer Company">
+                                    </div>
+                                </div>
+                                <div class="col-md-12 col-lg-4">
+                                    <div class="d-flex flex-column customer__info medium-center-text mobile-center-text ">
+                                        <span class="customer__info--name">Bert A.</span>
+                                        <span class="customer__info--note">CIO Higher Education, 51-200 employees</span>
+                                        <ul>
+                                            <li><b>Used the Software for:</b> 1-2 years</li>
+                                            <li><b>Source:</b> Capterra</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="col-md-12 col-lg-2">
+                                    <div class="d-flex flex-column text-center">
+                                        <span class="customer__rate">5/5</span>
+                                        <ul class="customer__stars">
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                            <li class="customer__stars--grey"></li>
+                                        </ul>
+                                        <span>Overall</span>
+                                    </div>
+                                </div>
+                                <div class="col-md-12 col-lg-4 hide-mobile">
+                                    <div class="customer__rating">
+                                        <span>Easy of use:</span>
+                                        <ul class="customer__stars">
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                            <li class="customer__stars--grey"></li>
+                                            <li class="customer__stars--grey"></li>
+                                        </ul>
+                                    </div>
+                                    <div class="customer__rating">
+                                        <span>Features & Functionality:</span>
+                                        <ul class="customer__stars">
+                                            <li></li>
+                                            <li></li>
+                                            <li class="customer__stars--grey"></li>
+                                            <li class="customer__stars--grey"></li>
+                                            <li class="customer__stars--grey"></li>
+                                        </ul>
+                                    </div>
+                                    <div class="customer__rating">
+                                        <span>Customer Support:</span>
+                                        <ul class="customer__stars">
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                            <li class="customer__stars--grey"></li>
+                                        </ul>
+                                    </div>
+                                    <div class="customer__rating">
+                                        <span>Value for Money:</span>
+                                        <ul class="customer__stars">
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                            <li></li>
+                                            <li class="customer__stars--grey"></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                    </div>
                 </div>
            </div>
            <div class="row dots-customer"></div>
-           <div class="row content-row justify-content-center">
-               <div class="col-lg-6 col-md-8 text-center">
-                   <h2 class="after-center">Complete Software Solution for Identity Management</h2>
-                   <p>Users use cloud apps. PortalGuard is an on premise, no client-side extension software. Since 2000 organizations in industries such as education, healthcare, finance and law with users from 10 to 15 000 have loved it’s usability and security.</p>
-               </div>
-           </div>
-           <div class="row content-row justify-content-center">
-               <div class="col-lg-2 col-6 text-center">
-                   <img class="img-fluid" src="svg/integrates.svg" alt="Integrates With Anything">
-                   <h3>Integrates With Anything</h3>
-               </div>
-               <div class="col-lg-2 col-6 text-center">
-                   <img class="img-fluid" src="svg/users.svg" alt="Integrates With Anything">
-                   <h3>Millions of Daily Users</h3>
+           <div data-aos="fade-up">
+                <div class="row content-row justify-content-center">
+                    <div class="col-lg-6 col-md-8 text-center">
+                        <h2 class="after-center">Complete Software Solution for Identity Management</h2>
+                        <p>Users use cloud apps. PortalGuard is an on premise, no client-side extension software. Since 2000 organizations in industries such as education, healthcare, finance and law with users from 10 to 15 000 have loved it’s usability and security.</p>
+                    </div>
                 </div>
-               <div class="col-lg-2 col-6 text-center">
-                   <img class="img-fluid" src="svg/stars.svg" alt="Integrates With Anything">
-                   <h3>5 Star Industry Rating</h3>
+                <div class="row content-row justify-content-center">
+                    <div class="col-lg-2 col-6 text-center">
+                        <img class="img-fluid" src="svg/integrates.svg" alt="Integrates With Anything">
+                        <h3>Integrates With Anything</h3>
+                    </div>
+                    <div class="col-lg-2 col-6 text-center">
+                        <img class="img-fluid" src="svg/users.svg" alt="Integrates With Anything">
+                        <h3>Millions of Daily Users</h3>
+                        </div>
+                    <div class="col-lg-2 col-6 text-center">
+                        <img class="img-fluid" src="svg/stars.svg" alt="Integrates With Anything">
+                        <h3>5 Star Industry Rating</h3>
+                        </div>
+                    <div class="col-lg-2 col-6 text-center">
+                        <img class="img-fluid" src="svg/support.svg" alt="Integrates With Anything">
+                        <h3>Anytime 24/7 Support</h3>
+                        </div>
                 </div>
-               <div class="col-lg-2 col-6 text-center">
-                   <img class="img-fluid" src="svg/support.svg" alt="Integrates With Anything">
-                   <h3>Anytime 24/7 Support</h3>
-                </div>
-           </div>
+            </div>
            <div class="row content-row fixed-price j-center">
                 <div class="col-lg-6 col-md-8 offset-lg-1 medium-center-text mobile-center-text">
                     <h2>Unlimited Users. One Fixed Price.</h2>
@@ -305,7 +477,7 @@
        </div>
        <div class="container-fluid">
            <div class="row content j-center">
-               <div class="col-5 hide-medium hide-mobile">
+               <div class="col-6 hide-medium hide-mobile">
                     <div class="row owl-carousel works-carousel">
                         <div>
                             <img class="img-fluid" src="img/laptop-img.jpg" alt="Carousel">
@@ -319,7 +491,7 @@
                     </div>
                     <div class="row dots-works"></div>
                </div>
-               <div class="col-lg-4 offset-lg-1 col-10">
+               <div class="col-lg-4 offset-lg-1 col-10 ">
                    <div class="works-item flex-column">
                        <img class="img-fluid"  src="svg/sync-icon.svg" alt="Sync">
                         <div class="works-item__text">
@@ -351,17 +523,17 @@
            </div>
        </div>
        <div class="container">
-           <div class="row content fixed-price j-center">
+           <div data-aos="fade-up" class="row content fixed-price j-center">
                <div class="col-lg-4 offset-lg-1 col-md-8 medium-center-text mobile-center-text">
                     <h2>Integrates with ANY app your school uses.</h2>
                     <p>You have unique requirements. Our team will integrate any app you need to use in your eco-system. Just ask.</p>
                </div>
                <div class="col-md-6 col-sm-10 col-xs-11 offset-lg-1">
-                   <div class="video-container">
-                        <a href="#"><img class="video-container__play" src="svg/play-btn.svg" alt=""></a>                     
-                        <img class="img-fluid" width="610px" src="img/play-video-bg.png" alt="Video">
-                   </div>
-               </div>
+                    <div class="video-container">
+                         <a href="#"><img class="video-container__play" src="svg/play-btn.svg" alt=""></a>                     
+                         <img class="img-fluid" width="610px" src="img/play-video-bg.png" alt="Video">
+                    </div>
+                </div>
            </div>
        </div>
        <div class="container-fluid">
@@ -443,6 +615,7 @@
        </div>
        <script src="js/jquery-3.3.1.min.js"></script>
        <script src="js/owl.carousel.js"></script>
+       <script src="js/aos.js"></script>
        <script src="js/main.js"></script>
     </body>
 </html>
