--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 </ul>
             </div>
        </div>
-       <div class="container-fluid hero-img">
+       <div class="container-fluid hero-img hero-img_home">
            <div data-aos="fade-up" class="container">
                <div class="row justify-content-center">
                    <div class="col-lg-9 col-md-12 col-10 text-center">
