--- a/education.html
+++ b/education.html
@@ -132,7 +132,7 @@
                <div class="row justify-content-center">
                    <div class="col-lg-9 col-md-12 col-10 text-center">
                         <h1>
-                            <span class="green-text">Schools Love</span> PortalGuard Software.
+                            <span class="green-text">Schools Love</span><br/>PortalGuard Software.
                         </h1>
                    </div>
                 </div>
